--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,11 @@
     <string name="tab_normal_timing">Normal</string>
     <string name="tab_pomodoro_timing">Pomodoro</string>
 
+    <string name="start">Start</string>
+    <string name="pause">Pause</string>
+    <string name="terminate">Terminate</string>
+
+    <!-- Place Holder -->
+    <string name="default_target">Timing</string>
+
 </resources>
