--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -17,8 +17,7 @@
     <string name="setting_fetch_policy_summary_on">总是从后端获取数据。</string>
     <string name="setting_fetch_policy_summary_off">只在首次打开时同步数据</string>
     <string name="setting_category_timer">计时器</string>
-    <string name="setting_screen_normal">常规计时器设置</string>
-    <string name="setting_screen_pomodoro">番茄计时器</string>
+    <string name="setting_pref_pomodoro_title">番茄计时器</string>
     <string name="setting_category_other">其他</string>
     <string name="setting_about_title">关于</string>
     <string name="tab_normal_timing">常规</string>
@@ -29,5 +28,7 @@
     <string name="setting_normal_length_title">专注时间长度</string>
     <string name="setting_pomodoro_length_title">番茄时间长度</string>
     <string name="setting_pomodoro_short_break_title">短休息长度</string>
-    <string name="setting_screen_pomodoro_summary">番茄计时器设置</string>
+    <string name="setting_pref_pomodoro_summary">番茄计时器设置</string>
+    <string name="setting_pref_normal_summary">常规计时器设置</string>
+    <string name="setting_pref_normal_title">常规计时器</string>
 </resources>
