--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -31,4 +31,7 @@
     <string name="setting_pref_pomodoro_summary">番茄计时器设置</string>
     <string name="setting_pref_normal_summary">常规计时器设置</string>
     <string name="setting_pref_normal_title">常规计时器</string>
+    <string name="second">秒</string>
+    <string name="minute">分钟</string>
+    <string name="hour">小时</string>
 </resources>
