feat: working on client init
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,10 @@
     <string name="hour">Hour</string>
 
     <!-- Setting Strings -->
+    <string name="setting_filename" translatable="false">setting</string>
+
     <string name="setting_category_server">Server</string>
+    <string name="setting_category_server_key" translatable="false">server_category</string>
     <string name="setting_backend_key" translatable="false">backend_url</string>
     <string name="setting_backend_title">GraphQL Endpoint</string>
     <string name="setting_backend_summary">Set backend GraphQL endpoint.</string>
