--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
 
     <string name="setting_category_server">Server</string>
     <string name="setting_category_server_key" translatable="false">server_category</string>
+    <string name="setting_category_server_title_valid">Server (Valid)</string>
+    <string name="setting_category_server_title_invalid">Server (Invalid)</string>
+
     <string name="setting_backend_key" translatable="false">backend_url</string>
     <string name="setting_backend_title">GraphQL Endpoint</string>
     <string name="setting_backend_summary">Set backend GraphQL endpoint.</string>
