--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -39,4 +39,5 @@
     <string name="setting_category_timer_setting_title">计时器设置</string>
     <string name="setting_category_server_title_valid">服务器 （有效）</string>
     <string name="setting_category_server_title_invalid">服务器 （无效）</string>
+    <string name="setting_category_server_title_pending">服务器 （检查中）</string>
 </resources>
