--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,6 @@
 
     <!-- Place Holder -->
     <string name="default_target" translatable="false">Timing</string>
+    <string name="refresh">Refresh</string>
 
 </resources>
