--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -45,4 +45,5 @@
     <string name="setting_category_user_title_invalid">用户（无效）</string>
     <string name="refresh">刷新</string>
     <string name="setting_category_user_title_failed">用户（检查失败）</string>
+    <string name="target_title_placeholder">Target Title</string>
 </resources>
