--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -46,4 +46,5 @@
     <string name="refresh">刷新</string>
     <string name="setting_category_user_title_failed">用户（检查失败）</string>
     <string name="target_title_placeholder">Target Title</string>
+    <string name="add_target">添加目标</string>
 </resources>
