--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="refresh">Refresh</string>
     <string name="target_title_placeholder">Target Title</string>
     <string name="add_target">Add Target</string>
+    <string name="user_not_valid">User not Valid</string>
 
 </resources>
