--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -45,8 +45,9 @@
     <string name="setting_category_user_title_invalid">用户（无效）</string>
     <string name="refresh">刷新</string>
     <string name="setting_category_user_title_failed">用户（检查失败）</string>
-    <string name="target_title_placeholder">Target Title</string>
+    <string name="target_title_placeholder">目标标题</string>
     <string name="add_target">添加目标</string>
     <string name="user_not_valid">用户不存在</string>
     <string name="no_target">无目标</string>
+    <string name="refresh_target_hint">刷新目标中</string>
 </resources>
