--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -50,4 +50,5 @@
     <string name="user_not_valid">用户不存在</string>
     <string name="no_target">无目标</string>
     <string name="refresh_target_hint">刷新目标中</string>
+    <string name="select_target_title">选择目标</string>
 </resources>
