--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,6 @@
     <string name="user_not_valid">User not Valid</string>
     <string name="no_target">No Target</string>
     <string name="refresh_target_hint">Refreshing targets.</string>
+    <string name="select_target_title">Select Target</string>
 
 </resources>
