--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -24,7 +24,6 @@
     <string name="tab_pomodoro_timing">番茄</string>
     <string name="start">开始</string>
     <string name="pause">暂停</string>
-    <string name="stop">停止</string>
     <string name="setting_normal_length_title">专注时间长度</string>
     <string name="setting_pomodoro_length_title">番茄时间长度</string>
     <string name="setting_pomodoro_short_break_title">短休息长度</string>
@@ -52,5 +51,6 @@
     <string name="refresh_target_hint">刷新目标中</string>
     <string name="select_target_title">选择目标</string>
     <string name="break_start">开始休息</string>
-    <string name="exit">退出</string>
+    <string name="exit">结束</string>
+    <string name="resume">继续</string>
 </resources>
