--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
 
     <string name="start">Start</string>
     <string name="pause">Pause</string>
-    <string name="stop">Stop</string>
+    <string name="resume">Continue</string>
     <string name="exit">Exit</string>
 
     <string name="break_start">Start break</string>
