feat: add button fragments
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -53,4 +53,7 @@
     <string name="break_start">开始休息</string>
     <string name="exit">结束</string>
     <string name="resume">继续</string>
+    <string name="break_skip">跳过休息</string>
+    <string name="skip">跳过</string>
+    <string name="work_continue">继续专注</string>
 </resources>
