--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,8 @@
 
     <!-- Place Holder -->
     <string name="default_target" translatable="false">Timing</string>
+    <string name="default_time" translatable="false">00:00</string>
+
     <string name="refresh">Refresh</string>
     <string name="target_title_placeholder">Target Title</string>
     <string name="add_target">Add Target</string>
