--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="no_target">No Target</string>
     <string name="refresh_target_hint">Refreshing targets.</string>
     <string name="select_target_title">Select Target</string>
+    <string name="no_target_hint">Please select a target.</string>
 
 </resources>
