--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -75,4 +75,5 @@
     <string name="create">创建</string>
     <string name="cancel">取消</string>
     <string name="target_add_success_postfix">&#160;成功添加</string>
+    <string name="too_short_pomodoro_toast">只有完整的番茄会被记录</string>
 </resources>
