feat: add user statistic

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -83,4 +83,5 @@
     <string name="timepieces">时间片</string>
     <string name="pomodoro">番茄</string>
     <string name="no_timepiece">没有时间片</string>
+    <string name="user_info">用户统计</string>
 </resources>
