--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,7 @@
     <string name="timepieces">Timepieces</string>
     <string name="default_type" translatable="false">Normal</string>
     <string name="no_timepiece">No timepiece.</string>
+    <string name="user_info">User statistic</string>
 
 
 </resources>
