feat: prepare for heatmap

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -84,4 +84,5 @@
     <string name="pomodoro">番茄</string>
     <string name="no_timepiece">没有时间片</string>
     <string name="user_info">用户统计</string>
+    <string name="heatmap">热力图</string>
 </resources>
