--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -85,4 +85,6 @@
     <string name="no_timepiece">没有时间片</string>
     <string name="user_info">用户统计</string>
     <string name="heatmap">热力图</string>
+    <string name="no_target_toast">无可选目标</string>
+    <string name="relaxing">休息中</string>
 </resources>
